[package]
name = "fossa_admin_tool"
version = "0.1.0"
authors = ["michael guldan <michaelguldan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fat"
path = "src/main.rs"

[dependencies]
reqwest = "~0.9.24"
serde = { version = "~1.0.104", features = ["derive"] }
serde_derive = "~1.0.104"
serde_json = "~1.0.44"
structopt = "0.2.10"
